fix: ヘッダーのz-indexを追加して重なり順を修正

--- a/css/style.css
+++ b/css/style.css
@@ -45,6 +45,7 @@ header
 ================================================ */
 #header {
   position: sticky;
+  z-index: 1;
   top: 0;
   display: flex;
   justify-content: space-between;
